--- a/index.html
+++ b/index.html
@@ -8,8 +8,100 @@
   </head>
   <body>
     <div class="container">
-      <div class="img-container"></div>
-      <div class="form-container"></div>
+      <div class="img-container">
+        <div class="image-credits">
+          Photo by
+          <a
+            href="https://unsplash.com/@_______life_?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+            target="_blank"
+            rel="noreferrer"
+            >Syuhei Inoue</a
+          >
+          on
+          <a
+            href="https://unsplash.com/photos/red-wooden-cross-on-gray-concrete-pathway-between-green-trees-during-daytime-kaoHI0iHJPM?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+            target="_blank"
+            rel="noreferrer"
+            >Unsplash</a
+          >
+        </div>
+        <div class="logo">
+          <p>Sign Up</p>
+        </div>
+        <img
+          src="/image/syuhei-inoue-kaoHI0iHJPM-unsplash.jpg"
+          srcset=""
+          alt=""
+        />
+      </div>
+      <div class="form-container">
+        <div class="text-container">
+          <p>
+            This is not a real online service! You know you need something like
+            this in your life to help you realize your deepest dreams. Sign up
+            now to get started.
+          </p>
+          <p>You know you want to.</p>
+        </div>
+        <form id="form">
+          <h2>Let's do this</h2>
+          <div class="input-container">
+            <div class="first-name-container i-container">
+              <label for="fname">FIRST NAME</label>
+              <input type="text" name="fname" id="fname" required />
+            </div>
+            <div class="last-name-container i-container">
+              <label for="lname">LAST NAME</label>
+              <input type="text" name="lname" id="lname" required />
+            </div>
+            <div class="email-container i-container">
+              <label for="mail">EMAIL</label>
+              <input type="email" name="user_email" id="mail" required />
+            </div>
+            <div class="phone-num-container i-container">
+              <label for="phone-number">PHONE NUMBER</label>
+              <input
+                type="tel"
+                name="phone-number"
+                id="phone-number"
+                required
+              />
+            </div>
+            <div class="password-container i-container">
+              <label for="password">PASSWORD</label>
+              <input
+                type="password"
+                name="password"
+                id="password"
+                minlength="5"
+                required
+              />
+            </div>
+            <div class="c-password-container i-container">
+              <label for="c-password">CONFIRM PASSWORD</label>
+              <input
+                type="password"
+                name="c-password"
+                id="c-password"
+                minlength="5"
+                required
+              />
+            </div>
+          </div>
+        </form>
+        <div class="send">
+          <button form="form" type="submit">Create Account</button>
+          <p>Arealdy have an account? <a href="index.html">Log in</a></p>
+        </div>
+        <footer>
+          <p>
+            Website made by
+            <a href="https://github.com/ReN-FL" target="_blank" rel="noreferrer"
+              >ReN</a
+            >
+          </p>
+        </footer>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
