--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <p>Sign Up</p>
         </div>
         <img
-          src="/image/syuhei-inoue-kaoHI0iHJPM-unsplash.jpg"
+          src="./image/syuhei-inoue-kaoHI0iHJPM-unsplash.jpg"
           srcset=""
           alt=""
         />
